--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
 
   <modules>
   	<module>tp05-core</module>
+      <module>tp05-server</module>
+      <module>tp05-client</module>
+      <module>tp05-contract</module>
   </modules>
   
   <build>
